--- a/src/screens/HomeScreen/HomeScreen.scss
+++ b/src/screens/HomeScreen/HomeScreen.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
 
 .homePost {
-    margin-top: 10px;
+    margin-top: 30px;
     background-color: #F5F4F4;
-    margin-left: 15px;
+    margin-left: 25px;
     margin-right: 15px;
     border-radius: 30px;
     border: 3px solid #2BAB47;
@@ -11,6 +11,16 @@
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    margin-bottom: 20px;
+}
+
+.loading-text {
+    color: #FFFFFF;
+    font-size: 20px;
+    font-family: 'Poppins';
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 20px;
 }
 .organizationIcon {
     border: 2px solid #2BAB47; 
@@ -39,11 +49,15 @@
 }
 
 .userNameText {
+    flex: 1;
     padding-left: 10px;
-    font-size: 24px;
+    font-size: 22px;
     font-family: 'Poppins';
-    font-weight: 600;
+    font-weight: 500;
     line-height: 30px;
+    text-align: left;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 .dotsButton {
     background: none;
@@ -88,7 +102,7 @@
     margin: 0;
 }
 
-.homeScreenAttenButton {
+.homeScreenAttendButton {
     display: flex;
     justify-content: center;
     width: 100%;
