--- a/src/screens/WelcomeScreen/WelcomeScreen.scss
+++ b/src/screens/WelcomeScreen/WelcomeScreen.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
+
 .container {
   position: relative;
   width: 100%;
@@ -25,14 +27,16 @@
     
 .welcome-text-container {
   margin-left: 30px;
-  margin-top: 50px;
+  margin-top: 100px;
 }
   
 .welcome-text {
   color: #ffffff;
-  font-weight: 800;
+  font-weight: 600;
   font-size: 40px;
   text-align: left;
+  font-family: 'Poppins';
+  line-height: 38px;
 }
   
 .des-text, .rewards-text {
@@ -41,6 +45,7 @@
   font-size: 20px;
   margin: 0;
   text-align: left;
+  font-family: 'Inter';
 }
 .button-container {
   display: flex;
