--- a/src/screens/WelcomeScreen/WelcomeScreen.scss
+++ b/src/screens/WelcomeScreen/WelcomeScreen.scss
@@ -2,10 +2,16 @@
 
 .container {
   position: relative;
+  height: 100vh;
   width: 100%;
-  height: 100vh; 
-  overflow: hidden;
+  overflow-y: auto;
+  background-color: #1E1E1E; 
+  background-image: url("../../assets/backgroundImage.png"); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
 }
+
 .background-image {
   position: absolute;
   top: 0;
@@ -21,13 +27,13 @@
   flex-direction: column;
   align-items: flex-start; 
   z-index: 1;
-  height: 100%;
   padding-bottom: 30px;
 }
     
 .welcome-text-container {
   margin-left: 30px;
   margin-top: 100px;
+  margin-bottom: 140px;
 }
   
 .welcome-text {
@@ -50,8 +56,8 @@
 .button-container {
   display: flex;
   justify-content: center;
-  width: 100%;
-  margin-top: auto;
-  margin-bottom: 15vh;
+  width: 90%;
+  margin: 20px auto;
+
 }
   
