--- a/src/screens/HomeScreen/HomeScreen.scss
+++ b/src/screens/HomeScreen/HomeScreen.scss
@@ -1,18 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
-
-.homePost {
-    margin-top: 30px;
-    background-color: #F5F4F4;
-    margin-left: 25px;
-    margin-right: 15px;
-    border-radius: 30px;
-    border: 3px solid #2BAB47;
-    padding-top: 10px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-bottom: 20px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;500;700&display=swap');
 
 .loading-text {
     color: #FFFFFF;
@@ -22,6 +8,42 @@
     line-height: 30px;
     margin-top: 20px;
 }
+
+.icon-title {
+    margin-top: -50px;
+}
+
+.homePost {
+    margin-top: 25px;
+    background-color: #F5F4F4;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 30px;
+    border: 3px solid #2BAB47;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 20px;
+}
+
+.homePost.inactive {
+    position: relative;
+    border: none;
+}
+
+.homePost.inactive::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 28px;
+    background: rgba(28, 27, 27, 0.4); 
+    z-index: 1;
+}
+
 .organizationIcon {
     border: 2px solid #2BAB47; 
     border-radius: 50%; 
@@ -32,6 +54,7 @@
     justify-content: center; 
     overflow: hidden;
 }
+
 .organizationIcon img {
     max-width: 100%; 
     max-height: 100%; 
@@ -51,6 +74,7 @@
 .userNameText {
     flex: 1;
     padding-left: 10px;
+    padding-right: 10px;
     font-size: 22px;
     font-family: 'Poppins';
     font-weight: 500;
@@ -59,6 +83,7 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
 }
+
 .dotsButton {
     background: none;
     border: none;
@@ -105,9 +130,10 @@
 .homeScreenAttendButton {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     margin-top: 30px;
     margin-bottom: 10px;
-    margin-left: 0;
-    margin-right: 0;
+    position: relative;
+    
 }
