--- a/src/screens/CollectRewardsScreen/CollectRewardsScreen.scss
+++ b/src/screens/CollectRewardsScreen/CollectRewardsScreen.scss
@@ -1,23 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
-
-.collect-container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-}
-  
-.backgroundImage {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;700&display=swap');
 .collectTextContainer {
   display: flex;
   flex-direction: column;
@@ -27,6 +8,7 @@
   margin-top: 40%;
   padding-left: 30px;
   padding-right: 50px;
+  margin-bottom: 200px;
 }
 
 .collectText {
@@ -40,7 +22,7 @@
 
 .desText {
   color: #DBDBDB;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 20px;
   margin: 0;
   text-align: left;
