--- a/src/screens/HomeScreen/HomeScreen.scss
+++ b/src/screens/HomeScreen/HomeScreen.scss
@@ -58,8 +58,8 @@
 .organizationIcon img {
     max-width: 100%; 
     max-height: 100%; 
-    display: block; 
     object-fit: cover;
+    object-position: center;
 }
 
 .postHeader {
