--- a/src/screens/ActivityScreen/ActivityScreen.scss
+++ b/src/screens/ActivityScreen/ActivityScreen.scss
@@ -60,6 +60,7 @@
     width: 38px;
     height: 38px;
 }
+
 .prizeIcon {
     width: 45px;
     height: 45px;
@@ -103,7 +104,7 @@
 
 .activityContainer {
     width: 48%;
-    height: calc(50% - 10px);
+    //height: calc(50% - 10px);
     background-color: #1E1E1E;
     padding: 15px;
     border-radius: 10px;
@@ -119,6 +120,10 @@
     display: flex; 
     align-items: center;
     justify-content: center;
+}
+
+.activityIconsMystery {
+    padding: 2px 6px;
 }
 
 .iconsContainer {
