--- a/src/screens/Metrics/MetricsScreen.scss
+++ b/src/screens/Metrics/MetricsScreen.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     //padding: 20px 10px
 }
 
@@ -21,18 +22,17 @@
     font-weight: 500;
     font-size: 27px;
     padding-left: 10px;
-    margin-right: 50px;
+    //margin-right: 50px;
 }
 .finishEngaging {
     border: none;
     border-radius: 8px;
-    font-family: 'Poppins';
+    font-family: Poppins;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
     padding: 5px 20px;
     background-color: rgba(82, 82, 82, 1);
     color: rgba(225, 225, 225, 1);
-
 }
 
 .praticipatedUsersContainer {
@@ -43,7 +43,8 @@
     border: 1px solid;
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 35px;
+    margin-top: 5px;
 }
 .circularProgressContainer {
     width: 95%;
@@ -163,7 +164,7 @@
 }
 
 .completedCount {
-    height: 40px;
+    height: 35px;
     line-height: 20px; 
     color: #fff;
     padding: 0 10px;
