--- a/src/screens/CollectRewardsScreen/CollectRewardsScreen.scss
+++ b/src/screens/CollectRewardsScreen/CollectRewardsScreen.scss
@@ -4,16 +4,14 @@
   flex-direction: column;
   align-items: flex-start;
   margin-top: 10%; 
-  margin-left: 5%;
-  margin-top: 40%;
+  margin-left: 10px;
   padding-left: 30px;
   padding-right: 50px;
   margin-bottom: 200px;
 }
 
 .collectText {
-  color: #FFFFFF;
-  font-weight: 600;
+  color: #FFE600;
   font-size: 40px;
   line-height: 1.2;
   text-align: left;
