--- a/src/screens/CongratsScreen/CongratsScreen.scss
+++ b/src/screens/CongratsScreen/CongratsScreen.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;500;700&display=swap');
 
 .congratulationsText {
   font-size: 28px;
@@ -8,6 +8,7 @@
   margin-top: 23%; 
   font-family: 'Poppins';
   margin-bottom: 10px;
+  font-weight: 500;
 }
 
 .pointsName {
@@ -21,18 +22,21 @@
 }
 
 .prizeImage {
-  margin-top: 30px;
+  margin-top: 80px;
   text-align: center;
 }
 
 .prizeImageContent {
-  width: 80%; 
+  width: 60%; 
 }
 
 .badgeNameText {
+  font-family: 'Poppins';
+  font-weight: 600;
   color: #FAB81E;
-  font-size: 30px;
+  font-size: 24px;
   text-align: center;
-  margin-bottom: 70px;
+  margin-top: 10px;
+  margin-bottom: 80px;
 }
 
