--- a/src/screens/SurveyScreen/SurveyScreen.scss
+++ b/src/screens/SurveyScreen/SurveyScreen.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
 
 .feedbackContentContainer {
-    margin-top: 30%;
+    margin-top: 18%;
     margin-left: 40px;
 }
 
@@ -12,7 +12,7 @@
     border-radius: 20px; 
     box-sizing: border-box;
     margin-right: 30px;
-    margin-bottom: 150px;
+    margin-bottom: 120px;
     width: 90%; 
 }
 
@@ -53,12 +53,12 @@
 }
 
 .skipButton {
-    font-family: 'Poppins';
+    font-family: 'Inter';
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 600;
     color: rgba(241, 236, 230, 1);
     border: none;
     background-color: transparent;
-    margin-top: 30px;
+    margin-top: 10px;
     margin-bottom: 50px;
 }
