--- a/src/screens/ThankYou/ThankYou.scss
+++ b/src/screens/ThankYou/ThankYou.scss
@@ -1,1 +1,9 @@
 // use the same styles as survey screen
+.congratsText {
+    color: #FFE600;
+    font-weight: 600;
+    font-size: 40px;
+    text-align: left;
+    font-family: 'Poppins';
+    line-height: 44px;
+  }
