--- a/src/screens/ActivityScreen/ActivityScreen.scss
+++ b/src/screens/ActivityScreen/ActivityScreen.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
 
 .scrollContent {
-    padding: 30px;
+    padding: 30px 20px;
 }
 
 .titleContainer {
@@ -51,6 +51,7 @@
     width: 44%;
     background-color: #1E1E1E;
     padding-left: 15px;
+    padding-right: 5px;
     border-radius: 10px;
     border: 1px solid #FAB81E;
     display: flex;
@@ -86,6 +87,7 @@
     font-size: 16px;
     color: #ABABAB;
     font-family: 'Poppins';
+    text-align: left;
     margin: 0; 
     padding: 0;
 }
