--- a/src/screens/CollectRewardsScreen/CollectRewardsScreen.scss
+++ b/src/screens/CollectRewardsScreen/CollectRewardsScreen.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: flex-start;
   margin-top: 10%; 
-  margin-left: 10px;
+  //margin-left: 10px;
   padding-left: 30px;
   padding-right: 50px;
   margin-bottom: 200px;
@@ -27,3 +27,32 @@
   font-family: 'Inter';
 }
 
+@media (max-width: 768px) {
+  .collectTextContainer {
+    margin-bottom: 180px;
+  }
+
+  .collectText {
+    font-size: 36px;
+    line-height: 1.3;
+  }
+
+  .desText {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 480px) {
+  .collectTextContainer {
+    margin-bottom: 180px;
+  }
+
+  .collectText {
+    font-size: 32px;
+    line-height: 1.2;
+  }
+
+  .desText {
+    font-size: 16px;
+  }
+}
