--- a/src/screens/WelcomeScreen/WelcomeScreen.scss
+++ b/src/screens/WelcomeScreen/WelcomeScreen.scss
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   overflow-y: auto;
   background-color: #1E1E1E; 
@@ -60,3 +60,46 @@
   margin: 20px auto;
 }
   
+@media (max-width: 768px) {
+  .welcome-text-container {
+      margin-left: 30px;
+      margin-top: 80px;
+      margin-bottom: 140px;
+  }
+
+  .welcome-text {
+      font-size: 38px;
+      line-height: 40px;
+  }
+
+  .des-text, .rewards-text {
+      font-size: 16px;
+  }
+
+  .button-container {
+      width: 70%;
+      margin: 10px auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .welcome-text-container {
+      margin-left: 30px;
+      margin-top: 50px;
+      margin-bottom: 140px;
+  }
+
+  .welcome-text {
+      font-size: 34px;
+      line-height: 40px;
+  }
+
+  .des-text, .rewards-text {
+      font-size: 17px;
+  }
+
+  .button-container {
+      width: 90%;
+      margin: 5px auto;
+  }
+}
