--- a/src/screens/ActivityScreen/ActivityScreen.scss
+++ b/src/screens/ActivityScreen/ActivityScreen.scss
@@ -199,22 +199,23 @@
 .modalContent {
     background-color: #393939;
     padding: 40px;
-    border-radius: 10px;
+    border-radius: 20px;
     text-align: center;
-    width: 70%;
+    margin: 0 25px;
 }
 
 .modalTitle {
-    font-size: 24px;
+    font-size: 22px;
     color: white;
     font-family: 'Poppins';
     margin: 0;
-    padding: 0;
+    padding-top: 20px;
 }
 
 .modalMessage {
-    font-size: 18px;
+    font-size: 16px;
     color: #F1ECE6;
+    font-family: Inter;
     margin: 0;
     padding: 0;
 }
@@ -223,6 +224,7 @@
     display: flex;
     justify-content: center;
     margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 @media (max-width: 768px) {
