--- a/src/screens/ThankYou/ThankYou.scss
+++ b/src/screens/ThankYou/ThankYou.scss
@@ -1,19 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');
 
+.thankYouContainer {
+  margin: 0 20px;
+  margin-top: 18%;
+}
+
+
 .congratsText {
-    color: #FFE600;
-    font-weight: 600;
-    font-size: 40px;
-    text-align: left;
-    font-family: 'Poppins';
-    line-height: 36px;
+  color: #FFE600;
+  font-weight: 600;
+  font-size: 40px;
+  text-align: left;
+  font-family: 'Poppins';
+  line-height: 36px;
+}
+
+.thankYouText {
+  font-family: Inter;
+  font-size: 17px;
+  font-weight: 400;
+  text-align: left;
+  color: #FFFFFF;
+  line-height: 22px;
+  margin-bottom: 5px;
+  margin-top: 8px;
+}
+
+@media (max-width: 768px) {
+  .congratsText {
+      font-size: 36px;
+      line-height: 34px;
   }
 
   .thankYouText {
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 400;
-    text-align: left;
-    color: #FFFFFF;
-
+      font-size: 16px;
   }
+}
+
+@media (max-width: 480px) {
+  .congratsText {
+      font-size: 32px;
+      line-height: 32px;
+  }
+
+  .thankYouText {
+      font-size: 15px;
+  }
+}
